--- a/index.html
+++ b/index.html
@@ -94,74 +94,39 @@
                 </div>
                 <p class="mb-5"></p>
                 <ul class="list-inline list-social-icons mb-0">
-
-                    <!--<li class="list-inline-item">
-                        <a href="https://stackoverflow.com/" target="_blank">
-                            <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
-                </span>
-                        </a>
-                    </li>-->
-
-                    <li class="list-inline-item">
-                        <a href="https://sites.google.com/view/muhammadzahinbinsamsuddin/" target="_blank">
-                            <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-user-circle  fa-stack-1x fa-inverse"></i>
-                </span>
-                        </a>
-                    </li>
-                    
-                    <!--<li class="list-inline-item">
-                        <a href="https://bitbucket.com/" target="_blank">
-                            <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
-                </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://github.com/" target="_blank">
-                            <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="" target="_blank">
-                            <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-                </span>
-                        </a>
-                    </li>-->
                     <li class="list-inline-item">
                         <!--<a href="linkedin://profile?id=muhammadzahinbinsamsuddin" target="_blank">-->
-                        <a href="https://www.linkedin.com/in/muhammadzahinbinsamsuddin" target="_blank">
+                        <a href="https://www.linkedin.com/in/mzahin/" target="_blank">
                             <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-                        </a>
-                    </li>
-                    <!--<li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank">
-                            <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a href="https://sites.google.com/view/mrzahin/" target="_blank">
                             <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-user-circle fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
-                    </li>-->
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/zahinsamsuddin/" target="_blank">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com/zahinsamsuddin/" target="_blank">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -418,8 +383,7 @@
             <div class="subheading mb-3">Contact details</div>
             <ul class="fa-ul mb-0">
                 <li><i class="fa fa-home"></i> Penang, Malaysia</li>
-                <li><i class="fa fa-phone"></i> +60 13 512 9875</li>
-                <li><i class="fa fa-envelope"></i> muhdzahin.biz@gmail.com</li>
+                <li><i class="fa fa-envelope"></i> zahinsmd@gmail.com</li>
             </ul>
         </div>
     </section>
