--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
                         <!--<a href="linkedin://profile?id=muhammadzahinbinsamsuddin" target="_blank">-->
-                        <a href="https://www.linkedin.com/in/mzahin/" target="_blank">
+                        <a href="https://my.linkedin.com/in/zahinsamsuddin/" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -104,7 +104,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://sites.google.com/view/mrzahin/" target="_blank">
+                        <a href="https://sites.google.com/view/zahinsamsuddin/" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-user-circle fa-stack-1x fa-inverse"></i>
