--- a/index.html
+++ b/index.html
@@ -323,6 +323,12 @@
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/automated-arduino-home-system">Automated Arduino Home System</a> (2016)</li>
                  </ul>
+                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i>Smart Dustbin (2019)</li>
+                 </ul>
+                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i>Auto Sanitizer Spray (2021)</li>
+                 </ul>
 
         </div>
     </section>
