--- a/index.html
+++ b/index.html
@@ -320,14 +320,34 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
             <h2 class="mb-5">Projects</h2>
+
+            <div class="subheading mb-3">Projects Involved</div>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/automated-arduino-home-system">Automated Arduino Home System</a> (2016)</li>
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/automated-arduino-home-system">Automated Arduino Home System</a> (2016)</li>
                  </ul>
                  <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i>Smart Dustbin (2019)</li>
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/iot-smart-dustbin">IoT Smart Dustbin</a> (2019)</li>
                  </ul>
                  <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i>Auto Sanitizer Spray (2021)</li>
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/auto-spray-sanitizer">Auto Sanitizer Spray</a> (2021)</li>
+                 </ul>
+                <br>
+
+            <div class="subheading mb-3">Projects Supervised</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=yoP2D24KVWI">Egg Breaking Machine</a> (2020)</li>
+                 </ul>
+                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=9mUfHP-Gxqo">Automated Storage and Retrieval System</a> (2020)</li>
+                 </ul>
+                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=qQ3xhwvqHc0">RFID Package Separator</a> (2020)</li>
+                 </ul>
+                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=PcexYX51c7I">Medicine Dispenser Machine</a> (2020)</li>
+                 </ul>
+                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=kZCjcpfgT9E">Waiter Robot</a> (2020)</li>
                  </ul>
 
         </div>
