--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                     <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#competitions">Competitions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#events">Events</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
                 </li>
                 <li class="nav-item">
@@ -353,6 +359,38 @@
         </div>
     </section>
 
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="competitions">
+        <div class="my-auto">
+            <h2 class="mb-5">Competitions</h2>
+
+            <div class="subheading mb-3">Competitions Involved</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-trophy"></i>ADTEC Kulim Invention Innovation Competition (Participant) (2016)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Mobile Apps Challenge (Participant) (2017)</li>
+                 </ul>
+                <br>
+        </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="events">
+        <div class="my-auto">
+            <h2 class="mb-5">Events</h2>
+
+            <div class="subheading mb-3">Events Involved</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-trophy"></i>Penang International Science Fair (Crew) (2016)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Virtual Orientation (Host &amp; Speaker) (2021)</li>
+                 </ul>
+                <br>
+
+            <div class="subheading mb-3">Events Organized</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Hiking Trip (2018)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Camping (2019)</li>
+                 </ul>
+        </div>
+    </section>
+
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
             <h2 class="mb-5">Awards &amp; Certifications</h2>
@@ -389,17 +427,29 @@
             </div>
 
             <!--<div class="subheading mb-3">Other Certification: </div>-->
-                <ul class="fa-ul mb-0">
-                    <!--<li><i class="fa-li fa fa-certificate"></i><a target="_blank" href=""></a></li>-->
-                    <li><i class="fa-li fa fa-certificate"></i>Best Outstanding Performance Student</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Digital Marketing Professional Certification</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Fundamental of Artificial Intelligence (AI)</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Create Your Own VR App In 4 Hours</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Basic Occupational First Aid, CPR &amp; AED</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Workshop On Teaching Methods In Promoting 21st Century Education</li>
-                    <li><i class="fa-li fa fa-certificate"></i>CS50's Introduction to Computer Science (Ongoing)</li>
-                 </ul>
 
+            <div class="subheading mb-3">Awards Received</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-certificate"></i>Best Outstanding Performance Student (2016)</li>
+                </ul>
+                <br>
+
+            <div class="subheading mb-3">Training Certifications</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-certificate"></i>Digital Marketing Professional Certification (2018)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Basic Occupational First Aid, CPR &amp; AED (2019)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Design Thinking Workshop (2020)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Certificate in Cyber Security - Ethical Hacking (2020)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Startup Essentials Workshop (2021)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>CS50's Introduction to Computer Science (Ongoing)</li>
+                </ul>
+                <br>
+
+            <div class="subheading mb-3">Other Certifications</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-certificate"></i>Fundamental of Artificial Intelligence (2019)</li>
+                </ul>
+                 
         </div>
     </section>
 
