--- a/index.html
+++ b/index.html
@@ -374,7 +374,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="events">
         <div class="my-auto">
-            <h2 class="mb-5">Events</h2>
+            <h2 class="mb-5">Training &amp; Events</h2>
+
+            <div class="subheading mb-3">Training Conducted</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-trophy"></i>Arduino School Workshop (3 schools) (2019)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Arduino Training (The One Academy) (2020)</li>
+                 </ul>
+                <br>
 
             <div class="subheading mb-3">Events Involved</div>
                 <ul class="fa-ul mb-0">
