--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Trainee (Tooling Department)</h3>
+                        <h3 class="mb-0">Apprentice</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="https://www.escatec.com/">Escatec Electronics Sdn Bhd</a>
                         </div>
