--- a/index.html
+++ b/index.html
@@ -293,14 +293,15 @@
         <div class="my-auto">
             <h2 class="mb-5">Skills</h2>
 
-            <div class="subheading mb-3">Professional Skills</div>
+            <!--<div class="subheading mb-3">Technical Skills</div>-->
             <ul class="fa-ul mb-0">
-                <li><i class="fa-li fa fa-check"></i><strong>PLC Knowledge :</strong> OMRON, Mitsubishi, Panasonic.</li>
-                <li><i class="fa-li fa fa-check"></i><strong>Software Knowledge :</strong> Proteus, Adobe Photoshop, Premier Pro &amp; XD.</li>
-                <li><i class="fa-li fa fa-check"></i><strong>Hardware Knowledge :</strong> Arduino, Raspberry Pi.</li>
-                <li><i class="fa-li fa fa-check"></i><strong>Engineering Knowledge :</strong> Electrical, Electronic, Pneumatic, Mechanical.</li>
-                <li><i class="fa-li fa fa-check"></i><strong>Programming Knowledge :</strong> C++, Python, HTML, CSS, JavaScript, PHP, MySQL, Dart.</li>
-                <li><i class="fa-li fa fa-check"></i><strong>Framework Knowledge :</strong> Flutter.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Language :</strong> Bahasa Melayu, English.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Software :</strong> Proteus, Adobe Photoshop, Premier Pro &amp; XD.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Hardware :</strong> Arduino, Raspberry Pi.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Engineering :</strong> Electrical, Electronic, Pneumatic, Mechanical.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Programming :</strong> C++, Python, HTML, CSS, JavaScript, PHP, MySQL, Dart.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Framework :</strong> Flutter.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Programmable Logic Controller :</strong> OMRON, Mitsubishi, Panasonic.</li>
                 <li><i class="fa-li fa fa-check"></i><strong>Other Skill Set :</strong> Digital Marketing, Web &amp; App Development, UI&sol;UX Design.</li>
             </ul>
 
@@ -329,14 +330,14 @@
 
             <div class="subheading mb-3">Projects Involved</div>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/automated-arduino-home-system">Automated Arduino Home System</a> (2016)</li>
-                 </ul>
-                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/iot-smart-dustbin">IoT Smart Dustbin</a> (2019)</li>
-                 </ul>
-                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/auto-spray-sanitizer">Auto Sanitizer Spray</a> (2021)</li>
-                 </ul>
+                </ul>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/iot-smart-dustbin">IoT Smart Dustbin</a> (2019)</li>
+                </ul>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/automated-arduino-home-system">Automated Arduino Home System</a> (2016)</li>
+                </ul>
                 <br>
 
             <div class="subheading mb-3">Projects Supervised</div>
@@ -365,8 +366,8 @@
 
             <div class="subheading mb-3">Competitions Involved</div>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-trophy"></i>ADTEC Kulim Invention Innovation Competition (Participant) (2016)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Mobile Apps Challenge (Participant) (2017)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>ADTEC Kulim Invention Innovation Competition (Participant) (2016)</li>
                  </ul>
                 <br>
         </div>
@@ -378,22 +379,23 @@
 
             <div class="subheading mb-3">Training Conducted</div>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-trophy"></i>Arduino School Workshop (3 schools) (2019)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Arduino Training (The One Academy) (2020)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Arduino School Workshop (3 schools) (2019)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>SMK St. Xavier's Electronics CLub (2018-2020)</li>
                  </ul>
                 <br>
 
             <div class="subheading mb-3">Events Involved</div>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-trophy"></i>Penang International Science Fair (Crew) (2016)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Infogenius Virtual Orientation (Host &amp; Speaker) (2021)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Penang International Science Fair (Crew) (2016)</li>
                  </ul>
                 <br>
 
             <div class="subheading mb-3">Events Organized</div>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Hiking Trip (2018)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Camping (2019)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Hiking Trip (2018)</li>
                  </ul>
         </div>
     </section>
@@ -443,12 +445,12 @@
 
             <div class="subheading mb-3">Training Certifications</div>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-certificate"></i>Digital Marketing Professional Certification (2018)</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Basic Occupational First Aid, CPR &amp; AED (2019)</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Design Thinking Workshop (2020)</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Certificate in Cyber Security - Ethical Hacking (2020)</li>
-                    <li><i class="fa-li fa fa-certificate"></i>Startup Essentials Workshop (2021)</li>
                     <li><i class="fa-li fa fa-certificate"></i>CS50's Introduction to Computer Science (Ongoing)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Startup Essentials Workshop (2021)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Certificate in Cyber Security - Ethical Hacking (2020)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Design Thinking Workshop (2020)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Basic Occupational First Aid, CPR &amp; AED (2019)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Digital Marketing Professional Certification (2018)</li>
                 </ul>
                 <br>
 
