--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-trophy"></i>Arduino Training (The One Academy) (2020)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Arduino School Workshop (3 schools) (2019)</li>
-                    <li><i class="fa-li fa fa-trophy"></i>SMK St. Xavier's Electronics CLub (2018-2020)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>SMK St. Xavier's Electronics Club (2018-2020)</li>
                  </ul>
                 <br>
 
@@ -394,6 +394,7 @@
 
             <div class="subheading mb-3">Events Organized</div>
                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Online Team Building (2021)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Camping (2019)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Hiking Trip (2018)</li>
                  </ul>
