--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
                         <!--<a href="linkedin://profile?id=muhammadzahinbinsamsuddin" target="_blank">-->
-                        <a href="https://my.linkedin.com/in/zahinsamsuddin/" target="_blank" data-toggle="tooltip" data-original-title="LinkedIn">
+                        <a href="https://my.linkedin.com/in/zahinsamsuddin/" target="_blank" data-toggle="tooltip1" data-original-title="LinkedIn">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -110,7 +110,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://sites.google.com/view/zahinsamsuddin/" target="_blank" data-toggle="tooltip" data-original-title="Portfolio Gallery">
+                        <a href="https://sites.google.com/view/zahinsamsuddin/" target="_blank" data-toggle="tooltip1" data-original-title="Portfolio Gallery">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-user-circle fa-stack-1x fa-inverse"></i>
@@ -118,7 +118,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/zahinsamsuddin/" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
+                        <a href="https://www.facebook.com/zahinsamsuddin/" target="_blank" data-toggle="tooltip1" data-original-title="Facebook">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -126,7 +126,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com/zahinsamsuddin/" target="_blank" data-toggle="tooltip" data-original-title="Instagram">
+                        <a href="https://www.instagram.com/zahinsamsuddin/" target="_blank" data-toggle="tooltip1" data-original-title="Instagram">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -134,7 +134,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://central.mymagic.my/cv/zahinsamsuddin/" target="_blank" data-toggle="tooltip" data-original-title="MaGIC Talentbank">
+                        <a href="https://central.mymagic.my/cv/zahinsamsuddin/" target="_blank" data-toggle="tooltip1" data-original-title="MaGIC Talentbank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-users fa-stack-1x fa-inverse"></i>
@@ -151,7 +151,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Technical Instructor</h3>
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Train and assess trainees.</li><li>Manage work and student projects.</li><li>Develop, update and maintain website.</li><li>Develop training materials and training kits.</li><li>Plan and conduct internal and external training.</li><li>Setup and maintain computer and networking systems.</li><li>Plan and implement latest working and training method.</li><li>Plan digital marketing strategy and update social media pages.</li></ol>">Technical Instructor</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
                         </div>
@@ -181,7 +181,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Part-Time Maintenance</h3>
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Setup and repair IT system and building facility.</li></ol>">Part-Time Maintenance</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
                         </div>
@@ -193,7 +193,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Equipment Technician</h3>
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Setting up equipment in the production line including Solder Paste Printer, Solder Paste Inspection (SPI) Machine and SMT Machine (Component and IC Mounter).</li><li>Maintain and ensure all the equipments in a good condition.</li><li>Repair damaged equipments.</li></ol>">Equipment Technician</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.kesp.com.my/">KESP Sdn Bhd</a>
                         </div>
@@ -205,7 +205,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Apprentice</h3>
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Conversion and repair of moulding tools.</li><li>Maintain and operate CNC machine and modify G-code program.</li></ol>">Apprentice</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="https://www.escatec.com/">Escatec Electronics Sdn Bhd</a>
                         </div>
@@ -466,6 +466,7 @@
             <div class="subheading mb-3">Other Certifications</div>
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-certificate"></i>Fundamental of Artificial Intelligence (2019)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>Create Your Own VR App in 4 Hours(2019)</li>
                 </ul>
                  
         </div>
@@ -495,8 +496,11 @@
 
     <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip({
+            $('[data-toggle="tooltip1"]').tooltip({
                 placement : 'top'
+            });
+            $('[data-toggle="tooltip2"]').tooltip({
+                placement : 'right'
             });
         });
     </script>
