--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-trophy"></i>Mobile Apps Challenge (Participant) (2017)</li>
                     <li><i class="fa-li fa fa-trophy"></i>ADTEC Kulim Invention Innovation Competition (Participant) (2016)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Pertandingan Kemahiran Peringkat PSMB (Participant) (2015)</li>
                  </ul>
                 <br>
         </div>
@@ -455,6 +456,7 @@
             <div class="subheading mb-3">Training Certifications</div>
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-certificate"></i>CS50's Introduction to Computer Science (Ongoing)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>PHP &amp; Web Programming (2021)</li>
                     <li><i class="fa-li fa fa-certificate"></i>Startup Essentials Workshop (2021)</li>
                     <li><i class="fa-li fa fa-certificate"></i>Certificate in Cyber Security - Ethical Hacking (2020)</li>
                     <li><i class="fa-li fa fa-certificate"></i>Design Thinking Workshop (2020)</li>
