--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QN1BCFRR4M"></script>
+
 </head>
 
 <body id="page-top">
@@ -32,7 +35,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">
                 <img width="45" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.png" alt="">
-                <strong>Muhammad Zahin</strong>
+                <strong>Muhammad Zahin Bin Samsuddin</strong>
             </span>
             <span class="d-none d-lg-block">
                 <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.png" alt="">
