--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">
                 <img width="45" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.png" alt="">
-                <strong>Muhammad Zahin Bin Samsuddin</strong>
+                <strong>Zahin Samsuddin</strong>
             </span>
             <span class="d-none d-lg-block">
                 <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.png" alt="">
@@ -82,6 +82,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#appointment">Appointment</a>
                 </li>
                 <!--<li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/gallery">Gallery</a>
@@ -494,6 +497,17 @@
             </ul>
         </div>
     </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="appointment">
+        <div class="my-auto">
+            <h2 class="mb-5">Appointment</h2>
+            <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/zahin_" style="min-width:320px;height:630px;"></div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            <!-- Calendly inline widget end -->
+        </div>
+    </section>
+
     </div>
 
     <!-- Bootstrap core JavaScript -->
