--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="Muhammad Zahin Bin Samsuddin - Technical Trainer | Maker | IT Support | Lifelong Learner | Aspiring Technopreneur | Freelance Recruiter">
+    <meta name="description" content="Muhammad Zahin Bin Samsuddin - Technical Trainer | Maker | IT Support | Lifelong Learner | Aspiring Technopreneur">
     <meta name="author" content="Muhammad Zahin Bin Samsuddin">
     <!--<meta name="keywords" content="Engineering, Instructor, Trainer, Maker,">-->
 
