Change skills section

--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
             <!--<div class="subheading mb-3">Technical Skills</div>-->
             <ul class="fa-ul mb-0">
                 <li><i class="fa-li fa fa-check"></i><strong>Language :</strong> Bahasa Melayu, English.</li>
-                <li><i class="fa-li fa fa-check"></i><strong>Software :</strong> Proteus, Adobe Photoshop, Premier Pro &amp; XD.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Software :</strong> Autodesk AutoCAD, Microsoft Office, Google Workspace.</li>
                 <li><i class="fa-li fa fa-check"></i><strong>Hardware :</strong> Arduino, Raspberry Pi.</li>
                 <li><i class="fa-li fa fa-check"></i><strong>Engineering :</strong> Electrical, Electronic, Pneumatic, Mechanical.</li>
-                <li><i class="fa-li fa fa-check"></i><strong>Programming :</strong> C++, Python, HTML, CSS, JavaScript, PHP, MySQL, Dart.</li>
+                <li><i class="fa-li fa fa-check"></i><strong>Programming :</strong> C++, Python, HTML, CSS, JavaScript, PHP, SQL, Dart.</li>
                 <li><i class="fa-li fa fa-check"></i><strong>Framework :</strong> Flutter.</li>
                 <li><i class="fa-li fa fa-check"></i><strong>Programmable Logic Controller :</strong> OMRON, Mitsubishi, Panasonic.</li>
                 <li><i class="fa-li fa fa-check"></i><strong>Other Skill Set :</strong> Digital Marketing, Web &amp; App Development, UI&sol;UX Design.</li>
