--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h1 class="mb-0">Muhammad Zahin
             <span class="text-primary">Bin Samsuddin</span>
           </h1>
-                <div class="subheading mb-5">Technical Instructor
+                <div class="subheading mb-5">Technical Trainer, IT Support, R&D
                     <br/>
                     <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
                 </div>
@@ -164,7 +164,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Train and assess trainees.</li><li>Manage work and student projects.</li><li>Develop, update and maintain website.</li><li>Develop training materials and training kits.</li><li>Plan and conduct internal and external training.</li><li>Setup and maintain computer and networking systems.</li><li>Plan and implement latest working and training method.</li><li>Plan digital marketing strategy and update social media pages.</li></ol>">Technical Instructor</h3>
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Perform R&D of new ideas.</li><li>Manage work and student projects.</li><li>Develop, update and maintain website.</li><li>Develop training materials and training kits.</li><li>Plan and conduct internal and external training.</li><li>Setup and maintain computer and networking systems.</li><li>Plan and implement latest working and training method.</li><li>Plan digital marketing strategy and update social media pages.</li></ol>">Technical Trainer, IT Support, R&D</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
                         </div>
@@ -206,7 +206,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Setting up equipment in the production line including Solder Paste Printer, Solder Paste Inspection (SPI) Machine and SMT Machine (Component and IC Mounter).</li><li>Maintain and ensure all the equipments in a good condition.</li><li>Repair damaged equipments.</li></ol>">Equipment Technician</h3>
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Setting up equipment in the production line including Solder Paste Printer, Solder Paste Inspection (SPI) Machine and SMT Machine (Component and IC Mounter).</li><li>Maintain and ensure all the equipments in a good condition.</li><li>Repair damaged equipments.</li></ol>">Equipment Technician (SMT)</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.kesp.com.my/">KESP Sdn Bhd</a>
                         </div>
@@ -362,21 +362,39 @@
                 <br>
 
             <div class="subheading mb-3">Projects Supervised</div>
-                <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=yoP2D24KVWI">Egg Breaking Machine</a> (2020)</li>
-                 </ul>
-                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=9mUfHP-Gxqo">Automated Storage and Retrieval System</a> (2020)</li>
-                 </ul>
-                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=qQ3xhwvqHc0">RFID Package Separator</a> (2020)</li>
-                 </ul>
-                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=PcexYX51c7I">Medicine Dispenser Machine</a> (2020)</li>
-                 </ul>
-                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=kZCjcpfgT9E">Waiter Robot</a> (2020)</li>
-                 </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a>IoT Medicine Dispenser Machine</a> (2021 - 2022)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a>IoT Car Wash System</a> (2021 - 2022)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a>Chocolate Packaging Machine</a> (2021 - 2022)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a>Multilevel Car Park System</a> (2021 - 2022)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a>Parcel Sorting Machine</a> (2021 - 2022)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a>Stamping Machine</a> (2021 - 2022)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=yoP2D24KVWI">Egg Breaking Machine</a> (2019 - 2020)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=9mUfHP-Gxqo">Automated Storage and Retrieval System</a> (2019 - 2020)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=qQ3xhwvqHc0">RFID Package Separator</a> (2019 - 2020)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=PcexYX51c7I">Medicine Dispenser Machine</a> (2019 - 2020)</li>
+            </ul>
+            <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://www.youtube.com/watch?v=kZCjcpfgT9E">Waiter Robot</a> (2019 - 2020)</li>
+            </ul>
 
         </div>
     </section>
@@ -418,7 +436,7 @@
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Online Team Building (2021)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Camping (2019)</li>
-                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Hiking Trip (2018)</li>
+                    <li><i class="fa-li fa fa-trophy"></i>Infogenius Students Hiking Trip (2018, 2021)</li>
                  </ul>
         </div>
     </section>
