--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="Muhammad Zahin Bin Samsuddin - Technical Trainer | Maker | IT Support | Lifelong Learner | Aspiring Technopreneur">
+    <meta name="description" content="Muhammad Zahin Bin Samsuddin - AMHS Equipment Technician at Intel Corporation">
     <meta name="author" content="Muhammad Zahin Bin Samsuddin">
     <!--<meta name="keywords" content="Engineering, Instructor, Trainer, Maker,">-->
 
-    <title>Muhammad Zahin Bin Samsuddin - Technical Trainer and Maker</title>
+    <title>Muhammad Zahin Bin Samsuddin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -83,9 +83,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#appointment">Appointment</a>
-                </li>
+                </li>-->
                 <!--<li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/gallery">Gallery</a>
                 </li>
@@ -107,9 +107,9 @@
                 <h1 class="mb-0">Muhammad Zahin
             <span class="text-primary">Bin Samsuddin</span>
           </h1>
-                <div class="subheading mb-5">Technical Trainer, IT Support, R&D
+                <div class="subheading mb-5">AMHS Equipment Technician
                     <br/>
-                    <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
+                    <a target="_blank" href="https://www.intel.com">Intel Corporation</a>
                 </div>
                 <p class="mb-5"></p>
                 <ul class="list-inline list-social-icons mb-0">
@@ -164,7 +164,19 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Perform R&D of new ideas.</li><li>Manage work and student projects.</li><li>Develop, update and maintain website.</li><li>Develop training materials and training kits.</li><li>Plan and conduct internal and external training.</li><li>Setup and maintain computer and networking systems.</li><li>Plan and implement latest working and training method.</li><li>Plan digital marketing strategy and update social media pages.</li></ol>">Technical Trainer, IT Support, R&D</h3>
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Ensure automation system OHV, AGV and Stocker available to wafer production system.</li></ol>">AMHS Equipment Technician</h3>
+                        <div class="subheading mb-3">
+                            <a target="_blank" href="https://www.intel.com">Intel Corporation</a>
+                        </div>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">February 2022 - Present</span>
+                    </div>
+                </div>
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Perform R&D of new ideas.</li><li>Manage work and student projects.</li><li>Develop, update and maintain website.</li><li>Develop training materials and training kits.</li><li>Plan and conduct internal and external training.</li><li>Setup and maintain computer and networking systems.</li><li>Plan and implement latest working and training method.</li><li>Plan digital marketing strategy and update social media pages.</li></ol>">Technical Trainer &#38 IT Support</h3>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
                         </div>
@@ -188,7 +200,7 @@
                         </p>-->
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">February 2017 - Present</span>
+                        <span class="text-primary">February 2017 - January 2022</span>
                     </div>
                 </div>
 
@@ -516,15 +528,15 @@
         </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="appointment">
-        <div class="my-auto">
-            <h2 class="mb-5">Appointment</h2>
+    <!--<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="appointment">-->
+        <!--<div class="my-auto">-->
+            <!--<h2 class="mb-5">Appointment</h2>-->
             <!-- Calendly inline widget begin -->
-            <div class="calendly-inline-widget" data-url="https://calendly.com/zahin_" style="min-width:320px;height:630px;"></div>
-            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            <!--<div class="calendly-inline-widget" data-url="https://calendly.com/zahin_" style="min-width:320px;height:630px;"></div>-->
+            <!--<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>-->
             <!-- Calendly inline widget end -->
-        </div>
-    </section>
+        <!--</div>-->
+    <!--</section>-->
 
     </div>
 
