--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Wawasan Open University</h3>
-                    <div class="subheading">Bachelor of Technology (BTech)</div>
-                    <div>Mechatronics</div>
+                    <h3 class="mb-0">Bachelor of Technology (BTech)</h3>
+                    <div class="subheading">Mechatronics</div>
+                    <div>Wawasan Open University</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">September 2020 - Present</span>
@@ -289,16 +289,16 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Infogenius Skills Training Centre</h3>
-                    <div class="subheading">Skill Diploma</div>
-                    <div>Industrial Automation</div>
+                    <h3 class="mb-0">Malaysian Skills Diploma (DKM)</h3>
+                    <div class="subheading">Industrial Automation</div>
+                    <div>Infogenius Skills Training Centre</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">September 2012 - April 2016</span>
                 </div>
             </div>
 
-            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <!--<div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0">Sekolah Menengah Kebangsaan Hutchings</h3>
                     <div class="subheading">High School</div>
@@ -318,7 +318,7 @@
                 <div class="resume-date text-md-right">
                     <span class="text-primary">January 2001 - December 2006</span>
                 </div>
-            </div>
+            </div>-->
 
     </section>
 
